--- a/Xie_Willie_L02.qmd
+++ b/Xie_Willie_L02.qmd
@@ -1,18 +1,15 @@
 ---
 title: "L02 More Models"
 subtitle: "Data Science 3 with R (STAT 301-3)"
-author: "YOUR NAME"
-
+author: "Willie Xie"
 format:
   html:
     toc: true
     embed-resources: true
     code-fold: show
     link-external-newwindow: true
-    
 execute:
   warning: false
-
 from: markdown+emoji  
 ---
 
@@ -22,7 +19,7 @@ from: markdown+emoji
 
 To link to your github **repo**sitory, appropriately edit the example link below. Meaning replace `https://your-github-repo-url` with your github repo url. Suggest verifying the link works before submitting.
 
-[https://your-github-repo-url](https://your-github-repo-url)
+[https://github.com/STAT301-3-2023SP/L02-more-models-AzureWX](https://github.com/STAT301-3-2023SP/L02-more-models-AzureWX)
 
 :::
 
